Designer: Fixed text wrapping of node titles

--- a/client/app/components/flowchart/_flowchart.sass
+++ b/client/app/components/flowchart/_flowchart.sass
@@ -1,5 +1,11 @@
 .node-header
-  font-size: 12px
+  display: table
+  font-weight: 600
+
+  p
+    display: table-cell
+    text-align: center
+    vertical-align: middle
 
 .invalid-node-header
   fill: #bababa
